--- a/file.html
+++ b/file.html
@@ -4,7 +4,8 @@
     <title>Simple Form</title>
 </head>
 <body>
-    <form action="http://localhost:8080" method="GET">
+    <!-- GET Form -->
+    <form action="http://localhost:8080/test.php" method="GET">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br>
         <label for="age">Age:</label>
@@ -12,7 +13,8 @@
         <button type="submit">Send (GET)</button>
     </form>
 
-    <form action="http://localhost:8080" method="POST">
+    <!-- POST Form -->
+    <form action="http://localhost:8080/test.php" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br>
         <label for="age">Age:</label>
@@ -21,3 +23,4 @@
     </form>
 </body>
 </html>
+
