--- a/file.html
+++ b/file.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <!-- GET Form -->
-    <form action="http://localhost:8080/test.php" method="GET">
+    <form action="http://localhost:8080/test2.php" method="GET">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br>
         <label for="age">Age:</label>
@@ -14,7 +14,7 @@
     </form>
 
     <!-- POST Form -->
-    <form action="http://localhost:8080/test.php" method="POST">
+    <form action="http://localhost:8080/test2.php" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br>
         <label for="age">Age:</label>
