--- a/file.html
+++ b/file.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <!-- GET Form -->
-    <form action="http://localhost:8080/test2.php" method="GET">
+    <form action="http://localhost:8080/test.php" method="get">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br>
         <label for="age">Age:</label>
@@ -14,12 +14,12 @@
     </form>
 
     <!-- POST Form -->
-    <form action="http://localhost:8080/test2.php" method="POST">
+    <form action="http://localhost:8080/test2.php" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br>
         <label for="age">Age:</label>
         <input type="text" id="age" name="age"><br>
-        <button type="submit">Send (POST)</button>
+        <input type="submit" value="log in">
     </form>
 </body>
 </html>
